# amplifier-module-hooks-sessionindicator

./: .gitignore  README.md  pyproject.toml
amplifier_module_hooks_sessionindicator/: __init__.py  hook.py  terminal.py
src/hooks_sessionindicator/: __init__.py  hook.py  spinner.py  unstick.py
tests/: __init__.py  conftest.py  test_hook.py  test_spinner.py  test_terminal.py  test_unstick.py
